# OpenGL-GLFW-Engine-Linux

./: CMakeLists.txt  GLFWOpenGL.sln  Mesh.cpp  Model.cpp  Model.h  Shader.cpp  main.cpp
Debug/: GLFWOpenGL.ilk
GLFWOpenGL/: CMakeLists.txt  Camera.h  GLFWOpenGL.vcxproj  GLFWOpenGL.vcxproj.filters  InteractionWithShader.cpp  InteractionWithShader.h  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  Texture.h  basic.shader  main.cpp  stb_image.cpp
GLFWOpenGL/Debug/: GLFWOpenGL.exe.recipe  vc142.idb
GLFWOpenGL/Debug/GLFWOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GLFWOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GLFWOpenGL/Header files/: Mesh.h  Model.h  Shader.h  Texture.h
GLFWOpenGL/Shaders/: basic.shader  basicWithMaps.shader  cube.shader  skybox.shader  testBasic.shader
GLFWOpenGL/x64/Debug/: vc142.idb
GLFWOpenGL/x64/Debug/GLFWOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GLFWOpenGL.lastbuildstate
Sandbox/: CMakeLists.txt  TestClass.cpp  TestClass.h  main.cpp
Shaders/: lightSource.shader  skybox.shader
include/glew-2.1.0/: CMakeLists.txt
include/glew-2.1.0/lib/: libGLEW.so.2.1.0
include/imgui/: CMakeLists.txt
include/stb_image/: CMakeLists.txt
include/stb_image/stb_image/: stb_image.cpp
